kustomization/base/argo-cd/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-metrics-scrape
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: agrocd-metrics-scrape
  template:
    metadata:
      labels:
        app.kubernetes.io/name: agrocd-metrics-scrape
    spec:
      containers: [] # Added with vector sidecar patch
